--- a/locale/events/Phishing.toml
+++ b/locale/events/Phishing.toml
@@ -3,5 +3,5 @@ phishingLoggingTitle = "Automated Phishing Module Triggered"
 phishingLoggingDescription = """
     **Member:** {0} ({1}) \n\
     **Action:** {2} \n\
-    **Link:** {3}
+    **Links:** {3}
 """
